docs/assets/css/dialtone--syntax.css
/* PrismJS 1.20.0
https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+less&plugins=line-numbers+command-line */
/**
 * prism.js default theme for JavaScript, CSS and HTML
 * Based on dabblet (http://dabblet.com)
 * @author Lea Verou
 */
code[class*="language-"],
pre[class*="language-"] {
  margin: 0;
  border-radius: 0.7rem;
  background: none;
  color: #292C33;
  color: var(--slate-light);
  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
  font-size: 1.2rem;
  font-size: var(--text-size--xs);
  line-height: 1.66666667;
  text-align: left;
  text-shadow: 0 1px white;
  white-space: pre;
  word-break: normal;
  word-spacing: normal;
  word-wrap: normal;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}
pre[class*="language-"]::selection,
pre[class*="language-"] ::selection,
code[class*="language-"]::selection,
code[class*="language-"] ::selection {
  background: #b3d4fc;
  text-shadow: none;
}
@media print {
  code[class*="language-"],
  pre[class*="language-"] {
    text-shadow: none;
  }
}
/* Code blocks */
pre[class*="language-"] {
  overflow: auto;
  padding: 1em;
}
:not(pre) > code[class*="language-"],
pre[class*="language-"] {
  background: #F1F2F4;
  background: var(--ash);
}
/* Inline code */
:not(pre) > code[class*="language-"] {
  padding: 0.1em;
  white-space: normal;
}
.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: slategray;
}
.token.punctuation {
  color: #6C6E75;
  color: var(--slate-lightest);
}
.token.namespace {
  opacity: 0.7;
}
.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
  color: #905;
}
.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #690;
}
.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  /* This background color was intended by the author of this theme. */
  background: hsla(0, 0%, 100%, 0.5);
  color: #9a6e3a;
}
.token.atrule,
.token.attr-value,
.token.keyword {
  color: #07a;
}
.token.function,
.token.class-name {
  color: #DD4A68;
}
.token.regex,
.token.important,
.token.variable {
  color: #e90;
}
.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}
.token.entity {
  cursor: help;
}
pre[class*="language-"].line-numbers {
  counter-reset: linenumber;
  position: relative;
  padding-left: 3.8em;
}
pre[class*="language-"].line-numbers > code {
  position: relative;
  white-space: inherit;
}
.line-numbers .line-numbers-rows {
  position: absolute;
  top: 0;
  left: -3.8em;
  width: 3em;
  border-right: 1px solid #6C6E75;
  border-right: 1px solid var(--slate-lightest);
  font-size: 100%;
  /* works for line-numbers below 1000 lines */
  letter-spacing: -1px;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.line-numbers-rows > span {
  counter-increment: linenumber;
  display: block;
}
.line-numbers-rows > span:before {
  content: counter(linenumber);
  display: block;
  padding-right: 0.8em;
  color: #6C6E75;
  color: var(--slate-lightest);
  text-align: right;
}
.command-line-prompt {
  display: block;
  float: left;
  margin-right: 1em;
  border-right: 1px solid #6C6E75;
  border-right: 1px solid var(--slate-lightest);
  font-size: 100%;
  letter-spacing: -1px;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.command-line-prompt > span:before {
  content: ' ';
  display: block;
  padding-right: 0.8em;
  color: #6C6E75;
  color: var(--slate-lightest);
}
.command-line-prompt > span[data-user]:before {
  content: "[" attr(data-user) "@" attr(data-host) "] $";
}
.command-line-prompt > span[data-user="root"]:before {
  content: "[" attr(data-user) "@" attr(data-host) "] #";
}
.command-line-prompt > span[data-prompt]:before {
  content: attr(data-prompt);
}

